@@ -1,26 +1,113 @@
-****DELIMITER  ON STEAM LIBRARY EXPORTER MUST BE SET TO ; BECAUSE SOME GAMES HAVE COMMAS IN THEIR NAMES****
+# GameLoom 🎮
 
-9/17:
-CSV importer mostly works with some issues
-Its not populating the name field on display properly and for awhile it 
-was because some of the game names will have commas in them (Warhammer 40,000: Mechanicus, etc.)
-so I changed the output on the csv from the website to use a ; as a delimiter since it was an option
-and that solved the problem with game names that contain commas but I still haven't worked out populating the
-name field properly (which had been happening because the in-name commas were throwing off the key/value pairs)
-but I'm fairly sure its close. Also there are some missing elements to the overall UI that I haven't worked out yet like the notes button
-or making the tabs actually change to different pages. I just started working on the csv importer because we already had the csv so a lot of the UI
-still isn't actually functional but we can work that out as we get there. 
+**GameLoom** is a personal game library manager that acts as a unified catalog for tracking physical and digital game collections across multiple platforms.
 
+---
 
-For now you can ignore the extra apache commons libraries in the lib folder, I was trying to use apache commons to parse the csv at one point because of the commas in names issue
-but then I realized the website will let me export with my choice of delimiter and maybe 1/ ~500,000 games has a semi-colon in it's name
-(I honestly can't think of even one but I'm sure its probably out there). So I ended up not needing to use it but if that changes the csv and io libraries from apachecommons are in the lib folder
+## Features
+- **Unified Game Library Management**: Combine physical and digital game libraries into a single repository.
+- **CSV Import Compatibility**: Import game data directly from platforms like Steam, Nintendo eShop, itch.io, and PlayStation.
+- **Cross-Platform Support**: Handles a variety of CSV delimiters (commas, semicolons, and tabs) and normalizes data for consistency.
+- **Auto-Save Functionality**: Automatically backs up the library every 3 minutes, with up to 20 backup versions retained.
+- **Advanced Filtering & Sorting**: Search and filter your library by platform, year, custom attributes, and more.
+- **Customizable Themes**: Select different UI themes to personalize your experience.
+- **Offline Privacy**: All data is managed locally with no network dependencies or cloud synchronization.
 
-9/18:
-.vscode folder and bin folder are removed from sync and will be ignored but should not affect your existing .vscode folder on your local drive.
-Our .vscode configurations for our local machines will be left out of the github syncs automatically from now on so we don't have to change any config paths.
+---
 
+## Requirements for Run From Source
+- Java 22 or later
+- JavaFX 22 or later
 
-testing github-vsCodethings -Na Huynh
+## Requirements for Run from .jar File
+- Java 22 or later
 
-Once again testing github -Leanna
+---
+
+## Setup
+
+### **Run From Source**
+   1. Clone the Repository:
+   ```bash
+   git clone https://github.com/your-repository/GameLoom.git
+   ```
+   2. Install JavaFX:
+      - Download JavaFX 22.0.2 SDK from [JavaFX Downloads](https://jdk.java.net/javafx22/).
+      - Set up the JavaFX module path in your IDE.
+
+   3. Run the Program:
+      - Compile and run GUIDriver.java using your preferred IDE or build tool.
+      - Ensure the JavaFX --module-path argument is configured correctly for your environment (especially if using VSCode).
+
+or
+
+### **Run from .jar File**:
+   1. Extract the .zip wherever you would like, navigate a terminal window to that directory location.
+   2. System Universal Command:
+      ```bash
+        Windows Command:
+            java --module-path <insert_path_to_extracted_folder>\GameLoom\lib\windows\javafx-sdk-22.0.2\lib\ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
+
+        Linux Command:
+            java --module-path <insert_path_to_extracted_folder>/GameLoom/lib/linux/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
+
+        Mac Command:
+            java --module-path <insert_path_to_extracted_folder>/GameLoom/lib/mac/javafx-sdk-22.0.2/lib/ --add-modules javafx.controls,javafx.fxml -jar GameLoom.jar
+         ```
+## Usage:
+### Importing Game Libraries:
+  - **Steam**: Use Lorenzo Stanco's Steam Library Exporter.
+  - **Nintendo (Switch)**: Use Nintendo eShop Purchase History Exporter.
+      - *Note*: Exported CSV files include an extra 5 rows at the bottom of the file to create space betweeen a total calculation, which is automatically ignored during import.
+  - **PlayStation**: Use PSDLE for exporting your PS4/PS5 library.
+     - Note: Exported CSV files include an extra header row at the bottom, which is automatically ignored during import.
+  - **itch.io**: Use the Itch.io Library to CSV Scraper.
+     - Requires Tampermonkey to run the userscript. See below.
+     - Learn More.
+
+### Exporting Game Libraries:
+GameLoom supports exporting your unified game library to a CSV file for external use or sharing.
+
+### Auto-Save:
+- Auto-save is enabled by default, backing up your library every 3 minutes to your home/GameLoom Exports folder.
+- A maximum of 20 auto-save files are retained in the GameLoom Exports folder located in your home directory.
+
+## Known Limitations:
+- itch.io Exporter: Limited testing due to small dataset availability.
+- PSDLE (PlayStation): EPSDLE export functionality for PS3, PSP, and PS Vita is not currently working as of October 2024.
+
+## Contributing:
+We welcome contributions to GameLoom! If you encounter bugs, have feature requests, or want to contribute code, please submit an issue or pull request to the repository.
+
+## Exporters:
+Below are the recommended tools for exporting game libraries from various platforms:
+
+- **Steam**: [Lorenzo Stanco's Steam Library Exporter](https://www.lorenzostanco.com/lab/steam/)
+- **PlayStation**: [PSDLE](https://repod.github.io/psdle/)
+   - The last row (database headers) is ignored during import by default.
+   
+- **Nintendo**: [eshop-purchase-history](https://github.com/redphx/eshop-purchase-history)
+   - Automatically ignores the last 5 rows during import that include summary data.
+   - Requires Tampermonkey browser extension. See below.
+   - [Additional Information](https://www.reddit.com/r/nintendo/comments/8w1s65/i_made_a_script_to_export_your_purchase_history/)
+     
+- **itch.io**: [Itch.io Library to CSV Scraper](https://gist.github.com/abraxas86/ad72ba46b6cdd86dc63058bba0c629c2#file-itchiocollectiontocsv-user-js)
+   - Requires Tampermonkey browser extension. See below.
+   - [Additional Information](https://itch.io/blog/572343/big-improvements-to-library-to-csv-scraper)
+
+### Tampermonkey Extension Links
+- [Firefox Tampermonkey Extension](https://addons.mozilla.org/en-US/firefox/addon/tampermonkey/)
+- [Chrome Tampermonkey Extension](https://chromewebstore.google.com/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo)
+
+## Tutorial Videos:
+To make the setup and usage process easier, we’ve created tutorial videos for the recommended exporters:
+- [Using Steam Exporter](https://youtu.be/WLLxdTEdJNc)
+- [Using PSDLE for PlayStation](https://youtu.be/CNgB_lgKCtw)
+- [Using itch.io Exporter](https://youtu.be/_Sj7nsSJG0A)
+- [Using Nintendo Switch Exporter](https://youtu.be/MLr4Wfojuyo)
+
+### License:
+GameLoom is licensed under MIT License. See the LICENSE file for more details.
+
+### Contact:
+For support or inquiries, please contact us via [GameLoomHelp@gmail.com].
